posiGen_FullsendBox/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SF2</fullName>
        <description>New Lead Process for the 201404 Rollout of Salesforce</description>
        <isActive>true</isActive>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Active_Campaign__c</fullName>
        <formula>IF(TEXT(LeadSource) = &quot;Ambassador&quot;,
CASE(Month(TODAY()),
7,&quot;701d00000022S9KAAU&quot;,
8,&quot;701d00000022S9UAAU&quot;,
9,&quot;701d00000022S9ZAAU&quot;,
10,&quot;701R0000000LrFKIA0&quot;,
11,&quot;701d00000022S9jAAE&quot;,
12,&quot;701d00000022S9oAAE&quot;,
&quot;701d00000022SKcAAM&quot;),
IF(TEXT(LeadSource) = &quot;Brightcurrent&quot;,
CASE(Month(TODAY()),
7,&quot;701d00000022S7sAAE&quot;,
8,&quot;701d00000022S7xAAE&quot;,
9,&quot;701d00000022SDqAAM&quot;,
10,&quot;701d00000022S87AAE&quot;,
11,&quot;701d00000022S8CAAU&quot;,
12,&quot;701d00000022S8RAAU&quot;,
&quot;701d00000022SKcAAM&quot;),
IF(TEXT(LeadSource) = &quot;Canvassing&quot;,
CASE(Month(TODAY()),
7,&quot;701d00000022SBVAA2&quot;,
8,&quot;701d00000022S3MAAU&quot;,
9,&quot;701d00000022S3RAAU&quot;,
10,&quot;701R0000000LrFKIA0&quot;,
11,&quot;701d00000022S3bAAE&quot;,
12,&quot;701d00000022S3gAAE&quot;,
&quot;701d00000022SKcAAM&quot;),
IF(TEXT(LeadSource) = &quot;Direct Mail&quot;,
CASE(Month(TODAY()),
7,&quot;701d00000022S8lAAE&quot;,
8,&quot;701d00000022S8vAAE&quot;,
9,&quot;701d00000022S90AAE&quot;,
10,&quot;701d00000022S95AAE&quot;,
11,&quot;701d00000022S9AAAU&quot;,
12,&quot;701d00000022S9FAAU&quot;,
&quot;701d00000022SKcAAM&quot;),
IF(TEXT(LeadSource) = &quot;Faraday&quot;,
CASE(Month(TODAY()),
7,&quot;701d00000022S5NAAU&quot;,
8,&quot;701d00000022S5SAAU&quot;,
9,&quot;701d00000022S5XAAU&quot;,
10,&quot;701d00000022S5cAAE&quot;,
11,&quot;701d00000022S5hAAE&quot;,
12,&quot;701d00000022S5mAAE&quot;,
&quot;701d00000022SKcAAM&quot;),
IF(TEXT(LeadSource) = &quot;Modernize&quot;,
CASE(Month(TODAY()),
7,&quot;701d00000022S4tAAE&quot;,
8,&quot;701d00000022S4yAAE&quot;,
9,&quot;701d00000022S53AAE&quot;,
10,&quot;701d00000022S58AAE&quot;,
11,&quot;701d00000022S5DAAU&quot;,
12,&quot;701d00000022S5IAAU&quot;,
&quot;701d00000022SKcAAM&quot;),
IF(TEXT(LeadSource) = &quot;Nonprofit Referral&quot;,
CASE(Month(TODAY()),
7,&quot;701d00000022S7OAAU&quot;,
8,&quot;701d00000022S7TAAU&quot;,
9,&quot;701d00000022S7YAAU&quot;,
10,&quot;701d00000022S7dAAE&quot;,
11,&quot;701d00000022S7iAAE&quot;,
12,&quot;701d00000022S7nAAE&quot;,
&quot;701d00000022SKcAAM&quot;),
IF(OR(TEXT(LeadSource) = &quot;Web&quot;,
	TEXT(LeadSource) = &quot;Call from Web&quot;),
CASE(Month(TODAY()),
7,&quot;701d00000022S3lAAE&quot;,
8,&quot;701d00000022S3qAAE&quot;,
9,&quot;701d00000022S3vAAE&quot;,
10,&quot;701d00000022S40AAE&quot;,
11,&quot;701d00000022S45AAE&quot;,
12,&quot;701d00000022S4AAAU&quot;,
&quot;701d00000022SKcAAM&quot;),
IF(OR(TEXT(LeadSource) = &quot;CT PPC&quot;,
	TEXT(LeadSource) = &quot;NY PPC&quot;,
	TEXT(LeadSource) = &quot;LA PPC&quot;),
CASE(Month(TODAY()),
7,&quot;701d00000022S4FAAU&quot;,
8,&quot;701d00000022S4UAAU&quot;,
9,&quot;701d00000022S4ZAAU&quot;,
10,&quot;701d00000022S4eAAE&quot;,
11,&quot;701d00000022S4jAAE&quot;,
12,&quot;701d00000022S4oAAE&quot;,
&quot;701d00000022SKcAAM&quot;),
IF(TEXT(LeadSource) = &quot;TV&quot;,
CASE(Month(TODAY()),
7,&quot;701d00000022S2nAAE&quot;,
8,&quot;701d00000022S2sAAE&quot;,
9,&quot;701d00000022S2xAAE&quot;,
10,&quot;701R0000000LrFKIA0&quot;,
11,&quot;701d00000022S37AAE&quot;,
12,&quot;701d00000022S3CAAU&quot;,
&quot;701R0000000LrFKIA0&quot;),
&quot;701R0000000LrFKIA0&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Time_Difference__c</fullName>
        <description>First Activity date/time and Created date/time difference.</description>
        <formula>IF(ISNULL(created_date_time__c  ),0, (First_Activity_date_time__c - created_date_time__c)*24*60*60*1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Time Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add_to_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers the Process flow that adds a new lead to a campaign as a campaign member</description>
        <label>Add to Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Referred_By_Co__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Test Custom Object</label>
        <referenceTo>Ambassador__Test__c</referenceTo>
        <relationshipLabel>Test Custom Objects</relationshipLabel>
        <relationshipName>Ambassador_Custom_Object_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Referred_By_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Ambassador</label>
        <referenceTo>Ambassador__Ambassador__c</referenceTo>
        <relationshipLabel>Referred Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Referred_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Short_Code__c</fullName>
        <label>Referring Short Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_CUR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Application Currently</description>
        <label>Application CUR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Application this month</description>
        <label>Application MTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_WTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Application this week</description>
        <label>Application WTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <defaultValue>DATE(2013,01,02)</defaultValue>
        <description>Date lead sheet  completed</description>
        <inlineHelpText>Date lead sheet completed</inlineHelpText>
        <label>Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Scheduled_By__c</fullName>
        <inlineHelpText>Who scheduled the appointment with the client?</inlineHelpText>
        <label>Appointment Scheduled By</label>
        <picklist>
            <picklistValues>
                <fullName>Alexa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brittany Plaisance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caitlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartrina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danielle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daphne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Norman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jennifer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeremy Graves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnnaifer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Lyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joseph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimberly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latarsha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michelle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olga Lopez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketer 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarket 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarket 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketer 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketer 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victor Brooker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the person that schedule the appointment.</inlineHelpText>
        <label>Appointment Scheduler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment_Set_Date__c</fullName>
        <inlineHelpText>Date that Green Grants spoke with the client and scheduled the appointment for a future date.</inlineHelpText>
        <label>Appointment Set Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Days__c</fullName>
        <formula>Customer_File_Approved_Date__c -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_CUR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Approved Currently</description>
        <label>Approved CUR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Approved this month</description>
        <label>Approved MTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_WTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Approved this week</description>
        <label>Approved WTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appt_Date_Time__c</fullName>
        <label>Brightcurrent Appt. Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Are_you_past_due_on_your_electric_bill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This question is for NY/CT customers.  Check if they are past due.</inlineHelpText>
        <label>Are you past due on your electric bill?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assess_Req_CUR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Assessment Requested Currently</description>
        <label>Assess Req CUR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assess_Req_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Assess Requested this month</description>
        <label>Assess Req MTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assess_Req_WTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assess Req WTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessed_Feas_CUR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Assessed feasible currenlty</description>
        <label>Assessed Feas CUR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessed_Feas_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Assessed Feasible this month</description>
        <label>Assessed Feas MTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessed_Feas_WTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Assessed Feasible this week</description>
        <label>Assessed Feas WTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Age__c</fullName>
        <formula>Days_Assessment_Assigned__c  -  Approval_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_s_Requested__c</fullName>
        <inlineHelpText>This field may trigger an email alert when given a value.</inlineHelpText>
        <label>Assessment(s) Requested</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Solar Panels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Hot Water Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assessor_s_Page_Signed__c</fullName>
        <label>Assessor&apos;s Page - Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Electric_Bill__c</fullName>
        <label>Average Monthly Electric Bill</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Owner&apos;s DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brightcurrent_Average_Monthly_bill__c</fullName>
        <label>Brightcurrent Average Monthly bill</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Can_owner_access_utility_bill_online__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Yes</inlineHelpText>
        <label>Can owner access utility bill online?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_for_Duplicates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you clicked on the Find Duplicates button to ensure there are no duplicate Leads for this customer?</inlineHelpText>
        <label>Checked for Duplicates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_has_a_unique_ownership_situation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The client either has a deceased spouse/shared homeowner, POA, divorce, offshore worker, succession etc. If you are unsure as to whether or not the client has a unique situation, check with Telemarketing management or Sales.</inlineHelpText>
        <label>Client has a unique ownership situation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_show_for_Reschedule__c</fullName>
        <inlineHelpText>Did client show for rescheduled appointment?</inlineHelpText>
        <label>Client show for Reschedule?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_CUR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Closed Currently</description>
        <label>Closed CUR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Closed this month</description>
        <label>Closed MTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_WTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Closed this week</description>
        <label>Closed WTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Owner_DOB__c</fullName>
        <description>Co-owners date of birth.</description>
        <label>Co-Owner DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Name__c</fullName>
        <label>Co-Owner Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Owner_SSN__c</fullName>
        <label>Co-Owner SSN</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_home_is_not_a_double__c</fullName>
        <description>Confirmed home is not double</description>
        <label>Confirmed home is not a double</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consulting_Agreement__c</fullName>
        <label>Consulting Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Contacting Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Reach Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called 6x, no response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <label>Contract Signed</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Hot Water Heater</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Consent_Date__c</fullName>
        <label>Customer Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_File_Approval__c</fullName>
        <inlineHelpText>This field may trigger an email alert when given a value.</inlineHelpText>
        <label>Customer File Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_File_Approved_Date__c</fullName>
        <label>Customer File Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_File_Approved__c</fullName>
        <formula>Is_Feasible__c ||  NOT( ISNULL( Customer_File_Approved_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer File Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_File_Not_Approved_Reason__c</fullName>
        <label>Customer File Not Approved Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_File_Submitted__c</fullName>
        <formula>Customer_File_Approved__c ||  NOT( ISNULL( Submitted_for_Approval_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer File Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Appt_Had_to_Customer_File_Submitted__c</fullName>
        <formula>Max(Submitted_for_Approval_Date__c  - NULLVALUE(Scheduled_Appointment_Date__c , Rescheduled_Appt_Date__c ), 0)</formula>
        <label>Days Appt Had to Customer File Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Assessment_Assigned__c</fullName>
        <formula>Roof_Assessor_Assigned_Date__c - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Assessment Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Assessment_Completed__c</fullName>
        <formula>Roof_Assessment_Complete_Date__c -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Assessment Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Cust_File_Approved_to_Feasible__c</fullName>
        <formula>Max(ConvertedDate -   Customer_File_Approved_Date__c, 0)</formula>
        <label>Days Cust File Approved to Feasible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Cust_File_Submitted_to_Approved__c</fullName>
        <formula>Max(Customer_File_Approved_Date__c - Submitted_for_Approval_Date__c,0)</formula>
        <label>Days Cust File Submitted to Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Lead_Created_to_Appointment_Had__c</fullName>
        <formula>max(IF(Initial_Appointment_Kept__c,   Scheduled_Appointment_Date__c -   DATEVALUE(CreatedDate) ,
IF( Rescheduled_Appt_Kept__c,  Rescheduled_Appt_Date__c - DATEVALUE(CreatedDate), NULL
)),0)</formula>
        <label>Days Lead Created to Appointment Had</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Submitted_for_Approval__c</fullName>
        <formula>TODAY () - Submitted_for_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Submitted for Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Convert__c</fullName>
        <formula>ConvertedDate - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Convert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_of_Auth_of_Credit_Check__c</fullName>
        <label>Declaration of Auth of Credit Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_of_Residence__c</fullName>
        <label>Declaration of Residence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_of_Separate_Ownership__c</fullName>
        <inlineHelpText>Executed after signed by Grant Administrator and notarized</inlineHelpText>
        <label>Declaration of Separate Ownership</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deferment_Incentive_Months_del__c</fullName>
        <inlineHelpText>How many months is the first payment delayed to incentive them to sign up.</inlineHelpText>
        <label>Deferment Incentive (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_client_show__c</fullName>
        <inlineHelpText>Did the client show for the scheduled appointment?

This field may trigger an email alert when given a value.</inlineHelpText>
        <label>Did client show?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_client_have_shading_around_home__c</fullName>
        <description>Have you spoken to the client about potential shading around the roof of their home?</description>
        <label>Does client have shading around home?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driver_s_License_State_ID__c</fullName>
        <label>Driver&apos;s License/State ID</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Number__c</fullName>
        <label>Elec Acct Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Number__c</fullName>
        <label>Electrical Permit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider_BC__c</fullName>
        <label>Electricity Provider BC</label>
        <picklist>
            <picklistValues>
                <fullName>National Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConEdison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eversource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Illuminating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electricity Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Utility</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Electricity Provider)</relationshipLabel>
        <relationshipName>Leads_Providing_Electricity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Energy_Bill__c</fullName>
        <inlineHelpText>Obtain 1 full year of Energy bills (if possible)</inlineHelpText>
        <label>Energy Bill</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Assessor__c</fullName>
        <label>Energy Efficiency Assessor</label>
        <picklist>
            <picklistValues>
                <fullName>Anders Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Assigned_Date__c</fullName>
        <label>Energy Efficiency Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Complete_Date__c</fullName>
        <label>Energy Efficiency Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasible_Solar_Hot_Water_Heater__c</fullName>
        <label>Feasible Solar Hot Water Heater</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feasible_Solar_Products__c</fullName>
        <label>Feasible Solar Products</label>
        <picklist>
            <picklistValues>
                <fullName>4 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.7 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.6 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 kw</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Feasible_Solar__c</fullName>
        <inlineHelpText>Is the customer feasible for Solar Panels?</inlineHelpText>
        <label>Feasible Solar</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Activity_date_time__c</fullName>
        <label>First Activity date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GG_Number__c</fullName>
        <label>GG Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
</CustomObject>